[SC-13166] - Fixed note date overlap name issue

--- a/src/app/crm/contacts/notes/notes.component.less
+++ b/src/app/crm/contacts/notes/notes.component.less
@@ -66,6 +66,7 @@
 
             .message-wrapper {
                 padding-top: 30px;
+                padding-bottom: 20px;
                 position: relative;
                 min-height: 90px;
                 &:before {
